syntax = "proto3";

package ecommerce.v1;
option go_package = "grpc_with_go/chap_05/proto/unray";

service OrderManagement {
    rpc addOrder (Order) returns (OrderId);
    rpc getOrder (OrderId) returns (Order);
}

message OrderId {
    string id = 1;
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price  = 4;
    string destination = 5;
}

